2008-01-03  Ulrich Drepper  <drepper@redhat.com>

	* defs/i386: Add yet more SSE instructions.

2008-01-02  Ulrich Drepper  <drepper@redhat.com>

	* i386_disasm.c (i386_disasm): Extend matcher to allow tables to
	contain instructions with prefixes.
	* defs/i386: Use for many SSE operations.
	* i386_data.h (FCT_mmxreg2): Removed.

2008-01-01  Ulrich Drepper  <drepper@redhat.com>

	* defs/i386: More 0f prefix support.
	* i386_data.h (FCT_mmxreg): Implement.
	(FCT_mmxreg2): Implement.
	(FCT_mmreg): Remove.
	* i386_disasm.c (i386_disasm): More special instructions.
	Fix tttn suffix for cmov.
	* i386_parse.y: Simplify test for mod/r_m mode.

2007-12-31  Ulrich Drepper  <drepper@redhat.com>

	* defs/i386: Fix order or arguments for mov of control/debug registers.
	* i386_data.h (FCT_ccc): Implement
	(FCT_ddd): Implement

2007-12-30  Ulrich Drepper  <drepper@redhat.com>

	* defs/i386: Fix 0f groups 6 and 7.
	* i386_data.c (FCT_mod$16r_m): Implement.
	* i386_disasm.c (i386_disasm): Third parameter can also have string.

2007-12-29  Ulrich Drepper  <drepper@redhat.com>

	* defs/i386: Add lots of floating point ops.
	* i386_data.h (FCT_fmod$fr_m): Removed.
	(FCT_freg): Implement.
	* i386_disasm.c (i386_disasm): Implement suffix_D.
	* i386_parse.y: Emit suffix_D.

	* defs/i386: Use rel instead of dispA.
	Fix lcall, dec, div, idiv, imul, inc, jmp, ljmp, mul, neg, not, push,
	test.

	* i386_data.h (FCT_dispA): Removed.
	(FCT_ds_xx): Add test for end of input buffer.
	* i386_disasm.c (ABORT_ENTRY): Removed.
	(i386_disasm): Fix handling of SIB.  Pass correct address value to
	operand callbacks.

	* Makefile.am (*.mnemonics): Filter out INVALID entry.
	* defs/i386: Define imms8 and use in appropriate places.
	Add INVALID entries for special opcodes with special mnemonics.
	Fix int3.  Fix typo in shl.  Correct xlat.
	* i386_data.h (FCT_ds_xx): New function.
	(FCT_ds_si): Use it.
	(FCT_ds_bx): New function.
	(FCT_imms8): New function.
	* i386_disasm.c (MNE_INVALID): Define.