@@ -1,3 +1,8 @@
+2008-01-04  Ulrich Drepper  <drepper@redhat.com>
+
+	* testfile44.S.bz2: New tests.
+	* testfile44.expect.bz2: Adjust.
+
 2008-01-03  Ulrich Drepper  <drepper@redhat.com>
 
 	* testfile44.S.bz2: New tests.
