@@ -1,3 +1,11 @@
+2008-01-04  Ulrich Drepper  <drepper@redhat.com>
+
+	* defs/i386: Cleanups, remove masks which are not needed.
+	Add remaining Intel opcodes.
+	* i386_data.h (FCT_imm8): Check for input buffer overrun.
+	* i386_disasm.c (i386_disasm): Likewise.
+	* i386_parse.y: Remove suffixes which are not needed anymore.
+
 2008-01-03  Ulrich Drepper  <drepper@redhat.com>
 
 	* defs/i386: Add yet more SSE instructions.
